Add shiney thingies

--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
 				geometry="primitive: sphere; radius: 0.6"
 				material="side: back; color: #84C;">
 			</a-entity>
+
+			<a-entity
+				position="0.25 0.25 0.25"
+				geometry="primitive: sphere; radius: 0.1"
+				material="side: front; color: white;">
+			</a-entity>
+			<a-entity
+				position="-0.25 -0.25 -0.25"
+				geometry="primitive: sphere; radius: 0.1"
+				material="side: front; color: white;">
+			</a-entity>
 	</a-entity>
 
 	<a-entity id="me" position="0 2 6" camera gamepad-controls look-controls wasd-controls></a-entity>
